Performance improvements + fix HTML deployment

--- a/html/src/main/webapp/Tribes.html
+++ b/html/src/main/webapp/Tribes.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Tribes</title>
-    <style>
-    body {
-      background-color: black;
-      color: white;
-    }
+    <head>
+        <title>Tribes</title>
+        <style>
+            body {
+                background-color: black;
+                color: white;
+            }
 
-    #playn-root {
-      width: 1400px;
-      height: 1000px;
-    }
-    </style>
-  </head>
-  <body bgcolor="black">
-    <script src="Tribes/Tribes.nocache.js"></script>
-    <div id="playn-root">
-  </div>
-  </body>
+            #playn-root {
+                display:block; 
+
+                position:absolute; 
+                top:0; 
+                left:0; 
+
+                width:1400px; 
+                height:1000px; 
+            }
+        </style>
+    </head>
+    <body bgcolor="black">
+        <div id="playn-root">
+            <script src="Tribes/Tribes.nocache.js"></script>
+        </div>
+
+    </body>
 </html>
