--- a/html/src/main/webapp/Tribes.html
+++ b/html/src/main/webapp/Tribes.html
@@ -12,11 +12,11 @@
                 display:block; 
 
                 position:absolute; 
-                top:0; 
-                left:0; 
+                margin-left:50%;
+                left:-450px; 
 
-                width:1400px; 
-                height:1000px; 
+                width:900px; 
+                height:800px; 
             }
         </style>
     </head>
